// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multi-range-slider-component disabled: sliders not focusable and set aria-disabled: disabled 1`] = `
<multi-range-slider-component>
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-readonly="true" class="slider-value-left" role="textbox">
            25
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-inside" style="left: 25%; width: 50%;"></div>
            <div aria-disabled="true" aria-label="Range slider lower" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="25" aria-valuetext="25" class="lower-thumb slider-thumb-container slider-thumb-container-disabled" role="slider" tabindex="-1" style="left: 25%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-disabled="true" aria-label="Range slider upper" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="75" aria-valuetext="75" class="slider-thumb-container slider-thumb-container-disabled upper-thumb" role="slider" tabindex="-1" style="left: 75%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-readonly="true" class="slider-value-right" role="textbox">
            75
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;

exports[`multi-range-slider-component drag lower and upper thumbs updates values (no snap): drag-both-thumbs 1`] = `
<multi-range-slider-component lower-value="20" upper-value="80">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-readonly="true" class="slider-value-left" role="textbox">
            25
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-inside" style="left: 25%; width: 50%;"></div>
            <div aria-label="Range slider lower" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="25" aria-valuetext="25" class="lower-thumb slider-thumb-container" role="slider" tabindex="0" style="left: 25%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-label="Range slider upper" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="75" aria-valuetext="75" class="slider-thumb-container upper-thumb" role="slider" tabindex="0" style="left: 75%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-readonly="true" class="slider-value-right" role="textbox">
            75
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;

exports[`multi-range-slider-component hideTextBoxes hides both; individual flags hide respective side: hide-both-textboxes 1`] = `
<multi-range-slider-component hide-text-boxes="">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-inside" style="left: 25%; width: 50%;"></div>
            <div aria-label="Range slider lower" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="25" aria-valuetext="25" class="lower-thumb slider-thumb-container" role="slider" tabindex="0" style="left: 25%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-label="Range slider upper" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="75" aria-valuetext="75" class="slider-thumb-container upper-thumb" role="slider" tabindex="0" style="left: 75%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;

exports[`multi-range-slider-component hideTextBoxes hides both; individual flags hide respective side: hide-left-textbox 1`] = `
<multi-range-slider-component hide-left-text-box="">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-inside" style="left: 25%; width: 50%;"></div>
            <div aria-label="Range slider lower" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="25" aria-valuetext="25" class="lower-thumb slider-thumb-container" role="slider" tabindex="0" style="left: 25%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-label="Range slider upper" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="75" aria-valuetext="75" class="slider-thumb-container upper-thumb" role="slider" tabindex="0" style="left: 75%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-readonly="true" class="slider-value-right" role="textbox">
            75
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;

exports[`multi-range-slider-component hideTextBoxes hides both; individual flags hide respective side: hide-right-textbox 1`] = `
<multi-range-slider-component hide-right-text-box="">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-readonly="true" class="slider-value-left" role="textbox">
            25
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-inside" style="left: 25%; width: 50%;"></div>
            <div aria-label="Range slider lower" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="25" aria-valuetext="25" class="lower-thumb slider-thumb-container" role="slider" tabindex="0" style="left: 25%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-label="Range slider upper" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="75" aria-valuetext="75" class="slider-thumb-container upper-thumb" role="slider" tabindex="0" style="left: 75%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;

exports[`multi-range-slider-component keyboard arrows/Home/End adjust the focused thumb and emit rangeChange: keyboard-nav 1`] = `
<multi-range-slider-component lower-value="2" upper-value="8">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-readonly="true" class="slider-value-left" role="textbox">
            9
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-inside" style="left: 90%; width: 10%;"></div>
            <div aria-label="Range slider lower" aria-orientation="horizontal" aria-valuemax="10" aria-valuemin="0" aria-valuenow="9" aria-valuetext="9" class="lower-thumb slider-thumb-container slider-thumb-container-active" role="slider" tabindex="0" style="left: 90%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-label="Range slider upper" aria-orientation="horizontal" aria-valuemax="10" aria-valuemin="0" aria-valuenow="10" aria-valuetext="10" class="slider-thumb-container slider-thumb-container-active upper-thumb" role="slider" tabindex="0" style="left: 100%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            10
          </div>
          <div aria-readonly="true" class="slider-value-right" role="textbox">
            10
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;

exports[`multi-range-slider-component label vs sliderThumbLabel rendering: label-mode 1`] = `
<multi-range-slider-component lower-value="10" upper-value="20">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <label class="form-control-label" id="mslider_biwhc6u8r-label">
          Range
          <span id="mslider_biwhc6u8r-value">
            10 – 20
          </span>
        </label>
        <div class="slider-container slider-container-horizontal">
          <div aria-labelledby="mslider_biwhc6u8r-label" aria-readonly="true" class="slider-value-left" role="textbox">
            10
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-inside" style="left: 10%; width: 10%;"></div>
            <div aria-labelledby="mslider_biwhc6u8r-label" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" aria-valuetext="10" class="lower-thumb slider-thumb-container" role="slider" tabindex="0" style="left: 10%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-labelledby="mslider_biwhc6u8r-label" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="20" aria-valuetext="20" class="slider-thumb-container upper-thumb" role="slider" tabindex="0" style="left: 20%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-labelledby="mslider_biwhc6u8r-label" aria-readonly="true" class="slider-value-right" role="textbox">
            20
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;

exports[`multi-range-slider-component label vs sliderThumbLabel rendering: thumb-label-mode 1`] = `
<multi-range-slider-component lower-value="10" slider-thumb-label="" upper-value="20">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-readonly="true" class="slider-value-left" role="textbox">
            10
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-inside" style="left: 10%; width: 10%;"></div>
            <div aria-label="Range lower" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" aria-valuetext="10" class="lower-thumb slider-thumb-container" role="slider" tabindex="0" style="left: 10%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
              <div aria-hidden="true" class="slider-thumb-label" style="position: absolute; left: 10%; transform: translateX(-52%) translateY(30%) translateY(-100%) rotate(45deg);">
                <div>
                  <span>
                    10
                  </span>
                </div>
              </div>
            </div>
            <div aria-label="Range upper" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="20" aria-valuetext="20" class="slider-thumb-container upper-thumb" role="slider" tabindex="0" style="left: 20%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
              <div aria-hidden="true" class="slider-thumb-label" style="position: absolute; left: calc(20% + 3px); transform: translateX(-62%) translateY(30%) translateY(-100%) rotate(45deg);">
                <div>
                  <span>
                    20
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-readonly="true" class="slider-value-right" role="textbox">
            20
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;

exports[`multi-range-slider-component parses tickValues JSON and renders tick labels: ticks-and-labels 1`] = `
<multi-range-slider-component lower-value="20" tick-labels="" tick-values="[0,25,50,75,100]" upper-value="80">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-readonly="true" class="slider-value-left" role="textbox">
            20%
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-inside" style="left: 20%; width: 60%;"></div>
            <div aria-label="Range slider lower" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="20" aria-valuetext="20%" class="lower-thumb slider-thumb-container" role="slider" tabindex="0" style="left: 20%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-label="Range slider upper" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="80" aria-valuetext="80%" class="slider-thumb-container upper-thumb" role="slider" tabindex="0" style="left: 80%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-hidden="true" class="slider-ticks">
              <div>
                <div class="slider-tick" style="left: 0%; top: calc(50% - 10px);"></div>
                <div class="slider-tick-label" style="left: 0%; transform: translateX(-50%);">
                  0%
                </div>
              </div>
              <div>
                <div class="slider-tick" style="left: 25%; top: calc(50% - 10px);"></div>
                <div class="slider-tick-label" style="left: 25%; transform: translateX(-50%);">
                  25%
                </div>
              </div>
              <div>
                <div class="slider-tick" style="left: 50%; top: calc(50% - 10px);"></div>
                <div class="slider-tick-label" style="left: 50%; transform: translateX(-50%);">
                  50%
                </div>
              </div>
              <div>
                <div class="slider-tick" style="left: 75%; top: calc(50% - 10px);"></div>
                <div class="slider-tick-label" style="left: 75%; transform: translateX(-50%);">
                  75%
                </div>
              </div>
              <div>
                <div class="slider-tick" style="left: 100%; top: calc(50% - 10px);"></div>
                <div class="slider-tick-label" style="left: 100%; transform: translateX(-50%);">
                  100%
                </div>
              </div>
            </div>
          </div>
          <div aria-readonly="true" class="slider-value-right" role="textbox">
            80%
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;

exports[`multi-range-slider-component rangeFillMode inside renders one colored segment; outside renders two: range-fill-inside 1`] = `
<multi-range-slider-component lower-value="20" range-fill-mode="inside" upper-value="80">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-readonly="true" class="slider-value-left" role="textbox">
            20
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-inside" style="left: 20%; width: 60%;"></div>
            <div aria-label="Range slider lower" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="20" aria-valuetext="20" class="lower-thumb slider-thumb-container" role="slider" tabindex="0" style="left: 20%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-label="Range slider upper" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="80" aria-valuetext="80" class="slider-thumb-container upper-thumb" role="slider" tabindex="0" style="left: 80%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-readonly="true" class="slider-value-right" role="textbox">
            80
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;

exports[`multi-range-slider-component rangeFillMode inside renders one colored segment; outside renders two: range-fill-outside 1`] = `
<multi-range-slider-component lower-value="20" range-fill-mode="outside" upper-value="80">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-readonly="true" class="slider-value-left" role="textbox">
            20
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-outside-left" style="left: 0%; width: 20%;"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-outside-right" style="left: 80%; width: 20%;"></div>
            <div aria-label="Range slider lower" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="20" aria-valuetext="20" class="lower-thumb slider-thumb-container" role="slider" tabindex="0" style="left: 20%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-label="Range slider upper" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="80" aria-valuetext="80" class="slider-thumb-container upper-thumb" role="slider" tabindex="0" style="left: 80%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-readonly="true" class="slider-value-right" role="textbox">
            80
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;

exports[`multi-range-slider-component renders with defaults (snapshot) + two slider roles: default-render 1`] = `
<multi-range-slider-component>
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-readonly="true" class="slider-value-left" role="textbox">
            25
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-inside" style="left: 25%; width: 50%;"></div>
            <div aria-label="Range slider lower" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="25" aria-valuetext="25" class="lower-thumb slider-thumb-container" role="slider" tabindex="0" style="left: 25%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-label="Range slider upper" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="75" aria-valuetext="75" class="slider-thumb-container upper-thumb" role="slider" tabindex="0" style="left: 75%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-readonly="true" class="slider-value-right" role="textbox">
            75
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;

exports[`multi-range-slider-component sliderThumbLabel renders in vertical orientation: thumb-label-mode-vertical 1`] = `
<multi-range-slider-component lower-value="10" slider-thumb-label="" upper-value="90">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-vertical" dir="ltr" role="presentation">
        <div class="slider-container slider-container-vertical">
          <div aria-readonly="true" class="slider-value-left" role="textbox">
            10
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-vertical" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-inside" style="bottom: 10%; height: 80%;"></div>
            <div aria-label="Range lower" aria-orientation="vertical" aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" aria-valuetext="10" class="lower-thumb slider-thumb-container" role="slider" tabindex="0" style="bottom: 10%; left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
              <div aria-hidden="true" class="slider-thumb-label" style="position: absolute; bottom: calc(10% - 18px); left: calc(100% + 18px); transform: translateY(50%) translateY(-50%) rotate(140deg);">
                <div>
                  <span>
                    10
                  </span>
                </div>
              </div>
            </div>
            <div aria-label="Range upper" aria-orientation="vertical" aria-valuemax="100" aria-valuemin="0" aria-valuenow="90" aria-valuetext="90" class="slider-thumb-container upper-thumb" role="slider" tabindex="0" style="bottom: 90%; left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
              <div aria-hidden="true" class="slider-thumb-label" style="position: absolute; bottom: calc(90% - 18px); left: calc(100% + 18px); transform: translateY(50%) translateY(-50%) rotate(140deg);">
                <div>
                  <span>
                    90
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-readonly="true" class="slider-value-right" role="textbox">
            90
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;

exports[`multi-range-slider-component snapToTicks snaps to nearest tick on drag: snap-to-ticks 1`] = `
<multi-range-slider-component lower-value="10" snap-to-ticks="" tick-values="[0,20,40,60,80,100]" upper-value="90">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-readonly="true" class="slider-value-left" role="textbox">
            40
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-inside" style="left: 40%; width: 50%;"></div>
            <div aria-label="Range slider lower" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="40" aria-valuetext="40" class="lower-thumb slider-thumb-container" role="slider" tabindex="0" style="left: 40%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-label="Range slider upper" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="90" aria-valuetext="90" class="slider-thumb-container upper-thumb" role="slider" tabindex="0" style="left: 90%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-hidden="true" class="slider-ticks">
              <div>
                <div class="slider-tick" style="left: 0%; top: calc(50% - 10px);"></div>
              </div>
              <div>
                <div class="slider-tick" style="left: 20%; top: calc(50% - 10px);"></div>
              </div>
              <div>
                <div class="slider-tick" style="left: 40%; top: calc(50% - 10px);"></div>
              </div>
              <div>
                <div class="slider-tick" style="left: 60%; top: calc(50% - 10px);"></div>
              </div>
              <div>
                <div class="slider-tick" style="left: 80%; top: calc(50% - 10px);"></div>
              </div>
              <div>
                <div class="slider-tick" style="left: 100%; top: calc(50% - 10px);"></div>
              </div>
            </div>
          </div>
          <div aria-readonly="true" class="slider-value-right" role="textbox">
            90
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;

exports[`multi-range-slider-component variant class applied to thumbs/tracks: variant-info 1`] = `
<multi-range-slider-component>
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-readonly="true" class="slider-value-left" role="textbox">
            25
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="info multi slider-track slider-track-inside" style="left: 25%; width: 50%;"></div>
            <div aria-label="Range slider lower" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="25" aria-valuetext="25" class="info lower-thumb slider-thumb-container" role="slider" tabindex="0" style="left: 25%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="info slider-thumb" role="presentation"></div>
            </div>
            <div aria-label="Range slider upper" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="75" aria-valuetext="75" class="info slider-thumb-container upper-thumb" role="slider" tabindex="0" style="left: 75%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="info slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-readonly="true" class="slider-value-right" role="textbox">
            75
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;

exports[`multi-range-slider-component vertical drag updates lower and upper thumbs: drag-both-thumbs-vertical 1`] = `
<multi-range-slider-component lower-value="20" upper-value="80">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-vertical" dir="ltr" role="presentation">
        <div class="slider-container slider-container-vertical">
          <div aria-readonly="true" class="slider-value-left" role="textbox">
            40
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-vertical" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-inside" style="bottom: 40%; height: 30%;"></div>
            <div aria-label="Range slider lower" aria-orientation="vertical" aria-valuemax="100" aria-valuemin="0" aria-valuenow="40" aria-valuetext="40" class="lower-thumb slider-thumb-container" role="slider" tabindex="0" style="bottom: 40%; left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-label="Range slider upper" aria-orientation="vertical" aria-valuemax="100" aria-valuemin="0" aria-valuenow="70" aria-valuetext="70" class="slider-thumb-container upper-thumb" role="slider" tabindex="0" style="bottom: 70%; left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-readonly="true" class="slider-value-right" role="textbox">
            70
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;

exports[`multi-range-slider-component vertical inside range fill uses bottom + height styles: vertical-inside-fill 1`] = `
<multi-range-slider-component lower-value="20" range-fill-mode="inside" upper-value="80">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-vertical" dir="ltr" role="presentation">
        <div class="slider-container slider-container-vertical">
          <div aria-readonly="true" class="slider-value-left" role="textbox">
            20
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-vertical" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-inside" style="bottom: 20%; height: 60%;"></div>
            <div aria-label="Range slider lower" aria-orientation="vertical" aria-valuemax="100" aria-valuemin="0" aria-valuenow="20" aria-valuetext="20" class="lower-thumb slider-thumb-container" role="slider" tabindex="0" style="bottom: 20%; left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-label="Range slider upper" aria-orientation="vertical" aria-valuemax="100" aria-valuemin="0" aria-valuenow="80" aria-valuetext="80" class="slider-thumb-container upper-thumb" role="slider" tabindex="0" style="bottom: 80%; left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-readonly="true" class="slider-value-right" role="textbox">
            80
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;

exports[`multi-range-slider-component vertical keyboard navigation ignores left/right and uses up/down: keyboard-nav-vertical 1`] = `
<multi-range-slider-component lower-value="2" upper-value="8">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-vertical" dir="ltr" role="presentation">
        <div class="slider-container slider-container-vertical">
          <div aria-readonly="true" class="slider-value-left" role="textbox">
            3
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-vertical" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-inside" style="bottom: 30%; height: 40%;"></div>
            <div aria-label="Range slider lower" aria-orientation="vertical" aria-valuemax="10" aria-valuemin="0" aria-valuenow="3" aria-valuetext="3" class="lower-thumb slider-thumb-container slider-thumb-container-active" role="slider" tabindex="0" style="bottom: 30%; left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-label="Range slider upper" aria-orientation="vertical" aria-valuemax="10" aria-valuemin="0" aria-valuenow="7" aria-valuetext="7" class="slider-thumb-container slider-thumb-container-active upper-thumb" role="slider" tabindex="0" style="bottom: 70%; left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            10
          </div>
          <div aria-readonly="true" class="slider-value-right" role="textbox">
            7
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;

exports[`multi-range-slider-component vertical orientation sets vertical classes and aria-orientation: vertical-orientation 1`] = `
<multi-range-slider-component lower-value="20" upper-value="80">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-vertical" dir="ltr" role="presentation">
        <div class="slider-container slider-container-vertical">
          <div aria-readonly="true" class="slider-value-left" role="textbox">
            20
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-vertical" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-inside" style="bottom: 20%; height: 60%;"></div>
            <div aria-label="Range slider lower" aria-orientation="vertical" aria-valuemax="100" aria-valuemin="0" aria-valuenow="20" aria-valuetext="20" class="lower-thumb slider-thumb-container" role="slider" tabindex="0" style="bottom: 20%; left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-label="Range slider upper" aria-orientation="vertical" aria-valuemax="100" aria-valuemin="0" aria-valuenow="80" aria-valuetext="80" class="slider-thumb-container upper-thumb" role="slider" tabindex="0" style="bottom: 80%; left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-readonly="true" class="slider-value-right" role="textbox">
            80
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;

exports[`multi-range-slider-component vertical outside range fill uses bottom + height styles for both segments: vertical-outside-fill 1`] = `
<multi-range-slider-component lower-value="20" range-fill-mode="outside" upper-value="80">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-vertical" dir="ltr" role="presentation">
        <div class="slider-container slider-container-vertical">
          <div aria-readonly="true" class="slider-value-left" role="textbox">
            20
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-vertical" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-outside-left" style="bottom: 0%; height: 20%;"></div>
            <div aria-hidden="true" class="multi slider-track slider-track-outside-right" style="bottom: 80%; height: 20%;"></div>
            <div aria-label="Range slider lower" aria-orientation="vertical" aria-valuemax="100" aria-valuemin="0" aria-valuenow="20" aria-valuetext="20" class="lower-thumb slider-thumb-container" role="slider" tabindex="0" style="bottom: 20%; left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-label="Range slider upper" aria-orientation="vertical" aria-valuemax="100" aria-valuemin="0" aria-valuenow="80" aria-valuetext="80" class="slider-thumb-container upper-thumb" role="slider" tabindex="0" style="bottom: 80%; left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-readonly="true" class="slider-value-right" role="textbox">
            80
          </div>
        </div>
      </div>
    </div>
  </div>
</multi-range-slider-component>
`;
